--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -8,7 +8,15 @@
 <div class="card" mb-3>
   <div class="row">
     <div class="col-md-4">
+      <% if (campground.images.length) { %>
       <img class="img-fluid" alt="" src="<%=campground.images[0].url%>" />
+      <% } else { %>
+      <img
+        class="img-fluid"
+        alt=""
+        src="https://res.cloudinary.com/dolegbw4c/image/upload/v1713919052/YelpCamp/kx4gyyrbg3qlikjf6of9.jpg"
+      />
+      <% }%>
     </div>
     <div class="col-md-8">
       <div class="card-body">
