--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,6 +2,7 @@
 
 <div class="row">
   <div class="col-6">
+    <div id="map" style="width: 400px; height: 300px"></div>
     <div id="campgroundCarousel" class="carousel slide">
       <div class="carousel-inner">
         <% campground.images.forEach((img, i) => {%>
@@ -11,21 +12,11 @@
         <% }) %>
       </div>
       <% if (campground.images.length > 1 ) { %>
-      <a
-        class="carousel-control-prev"
-        href="#campgroundCarousel"
-        role="button"
-        data-slide="prev"
-      >
+      <a class="carousel-control-prev" href="#campgroundCarousel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a
-        class="carousel-control-next"
-        href="#campgroundCarousel"
-        role="button"
-        data-slide="next"
-      >
+      <a class="carousel-control-next" href="#campgroundCarousel" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
@@ -39,23 +30,13 @@
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item text-muted"><%= campground.location%></li>
-        <li class="list-group-item">
-          Submitted by <%= campground.author.username%>
-        </li>
+        <li class="list-group-item">Submitted by <%= campground.author.username%></li>
         <li class="list-group-item">$<%= campground.price%>/night</li>
       </ul>
       <% if( currentUser && campground.author.equals(currentUser._id)) {%>
       <div class="card-body">
-        <a
-          class="card-link btn btn-info"
-          href="/campgrounds/<%=campground._id%>/edit"
-          >Edit</a
-        >
-        <form
-          class="d-inline"
-          action="/campgrounds/<%=campground._id%>?_method=DELETE"
-          method="POST"
-        >
+        <a class="card-link btn btn-info" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
+        <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
           <button class="btn btn-danger">Delete</button>
         </form>
       </div>
@@ -67,12 +48,7 @@
     <% if(currentUser){ %>
     <h2>Leave a Review</h2>
 
-    <form
-      action="/campgrounds/<%=campground._id%>/reviews"
-      method="POST"
-      class="mb-3 validated-form"
-      novalidate
-    >
+    <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
       <div class="mb-3">
         <fieldset class="starability-basic">
           <input
@@ -84,53 +60,21 @@
             checked
             aria-label="No rating."
           />
-          <input
-            type="radio"
-            id="first-rate1"
-            name="review[rating]"
-            value="1"
-          />
+          <input type="radio" id="first-rate1" name="review[rating]" value="1" />
           <label for="first-rate1" title="Terrible">1 star</label>
-          <input
-            type="radio"
-            id="first-rate2"
-            name="review[rating]"
-            value="2"
-          />
+          <input type="radio" id="first-rate2" name="review[rating]" value="2" />
           <label for="first-rate2" title="Not good">2 stars</label>
-          <input
-            type="radio"
-            id="first-rate3"
-            name="review[rating]"
-            value="3"
-          />
+          <input type="radio" id="first-rate3" name="review[rating]" value="3" />
           <label for="first-rate3" title="Average">3 stars</label>
-          <input
-            type="radio"
-            id="first-rate4"
-            name="review[rating]"
-            value="4"
-          />
+          <input type="radio" id="first-rate4" name="review[rating]" value="4" />
           <label for="first-rate4" title="Very good">4 stars</label>
-          <input
-            type="radio"
-            id="first-rate5"
-            name="review[rating]"
-            value="5"
-          />
+          <input type="radio" id="first-rate5" name="review[rating]" value="5" />
           <label for="first-rate5" title="Amazing">5 stars</label>
         </fieldset>
       </div>
       <div class="mb-3">
         <label class="form-label" for="body">Review</label>
-        <textarea
-          class="form-control"
-          name="review[body]"
-          id="body"
-          cols="30"
-          rows="3"
-          required
-        ></textarea>
+        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
         <div class="valid-feedback">Looks good!</div>
       </div>
       <button class="btn btn-success">Submit</button>
@@ -139,15 +83,10 @@
     <div class="card mb-3">
       <div class="card-body">
         <h5 class="card-title"><%= review.author.username %></h5>
-        <p class="starability-result" data-rating="<%= review.rating %>">
-          Rated: <%= review.rating %> stars
-        </p>
+        <p class="starability-result" data-rating="<%= review.rating %>">Rated: <%= review.rating %> stars</p>
         <p class="card-text">Review: <%= review.body %></p>
         <% if( currentUser && review.author.equals(currentUser._id)) {%>
-        <form
-          action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
-          method="POST"
-        >
+        <form action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
           <button class="btn btn-sm btn-danger">Delete</button>
         </form>
         <% } %>
@@ -156,3 +95,9 @@
     <% } %>
   </div>
 </div>
+
+<script>
+  const mapToken = "<%- process.env.MAPBOX_TOKEN %>"
+  const campground = <%- JSON.stringify(campground) %>;
+</script>
+<script src="/javascripts/showPageMap.js"></script>
