--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,13 +12,14 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/stylesheets/stars.css" />
+
+    <script src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css" rel="stylesheet" />
   </head>
 
   <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar')%>
-    <main class="container mt-5">
-      <%- include('../partials/flash')%> <%- body %>
-    </main>
+    <main class="container mt-5"><%- include('../partials/flash')%> <%- body %></main>
     <%- include('../partials/footer')%>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
