--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,17 +1,18 @@
 <% layout('layouts/boilerplate')%>
-
+<div id="cluster-map" style="width: 100%; height: 500px"></div>
 <h1>All Campgrounds</h1>
 <div class="mb-3">
   <a class="btn btn-success" href="/campgrounds/new">Add Campground</a>
 </div>
 <% for (let campground of campgrounds){%>
-<div class="card" mb-3>
+<div class="card mb-3">
   <div class="row">
     <div class="col-md-4">
       <% if (campground.images.length) { %>
-      <img class="img-fluid" alt="" src="<%=campground.images[0].url%>" />
+      <img crossorigin="anonymous" class="img-fluid" alt="" src="<%=campground.images[0].url%>" />
       <% } else { %>
       <img
+        crossorigin="anonymous"
         class="img-fluid"
         alt=""
         src="https://res.cloudinary.com/dolegbw4c/image/upload/v1713919052/YelpCamp/kx4gyyrbg3qlikjf6of9.jpg"
@@ -31,3 +32,8 @@
   </div>
 </div>
 <% }%>
+<script>
+  const mapToken = "<%- process.env.MAPBOX_TOKEN %>";
+  const campgrounds = {features: <%- JSON.stringify(campgrounds) %>};
+</script>
+<script src="/javascripts/clusterMap.js"></script>
