--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,34 +1,16 @@
 <% layout('layouts/boilerplate')%>
 <div class="row">
   <h1 class="text-center">New Campground</h1>
-  <div class="col-6 offset-3">
-    <form
-      action="/campgrounds"
-      method="POST"
-      novalidate
-      class="validated-form"
-      enctype="multipart/form-data"
-    >
+  <div class="col-md-6 offset-md-3">
+    <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
-        <input
-          class="form-control"
-          type="text"
-          id="title"
-          name="campground[title]"
-          required
-        />
+        <input class="form-control" type="text" id="title" name="campground[title]" required />
         <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
-        <input
-          class="form-control"
-          type="text"
-          id="location"
-          name="campground[location]"
-          required
-        />
+        <input class="form-control" type="text" id="location" name="campground[location]" required />
         <div class="valid-feedback">Looks good!</div>
       </div>
 
@@ -52,24 +34,12 @@
 
       <div class="mb-3">
         <label class="form-label" for="description">Description</label>
-        <textarea
-          class="form-control"
-          type="text"
-          id="description"
-          name="campground[description]"
-          required
-        ></textarea>
+        <textarea class="form-control" type="text" id="description" name="campground[description]" required></textarea>
         <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <div class="form-file custom-file">
-          <input
-            type="file"
-            name="image"
-            class="form-file-input"
-            id="image"
-            multiple
-          />
+          <input type="file" name="image" class="form-file-input" id="image" multiple />
           <label for="image" class="form-file-label">
             <span class="form-file-text custom-file-label">Images</span>
             <span class="form-file-button">Browse</span>
