--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,12 +2,11 @@
 
 <div class="row">
   <div class="col-6">
-    <div id="map" style="width: 400px; height: 300px"></div>
     <div id="campgroundCarousel" class="carousel slide">
       <div class="carousel-inner">
         <% campground.images.forEach((img, i) => {%>
         <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
-          <img src="<%= img.url %>" class="d-block w-100" alt="" />
+          <img crossorigin="anonymous" src="<%= img.url %>" class="d-block w-100" alt="" />
         </div>
         <% }) %>
       </div>
@@ -44,7 +43,10 @@
       <div class="card-footer text-muted">2 days ago</div>
     </div>
   </div>
+
   <div class="col-6">
+    <div id="map"></div>
+
     <% if(currentUser){ %>
     <h2>Leave a Review</h2>
 
